# ML_hits2025_1st

./: .gitignore  Dockerfile  README.md  model.py  pyproject.toml
data/: results.csv
models/: model.pkl
notebooks/: Notebook.ipynb
results/: predictions.csv
