[project]
name = "classicml"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyacheslav Yanushchik",email = "viterbig@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yes (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
